--- a/apps UI/ui.css
+++ b/apps UI/ui.css
@@ -11,7 +11,7 @@ button{
 
     background: rgba(221, 221, 221, 0.9);
     border-radius: 3px;
-    border: 1px solid black;
+    border: none;
     color: rgb(0, 0, 0);
 }
 button:hover{
@@ -27,7 +27,7 @@ button:hover{
 
     background: rgba(172, 172, 172, 0.9);
     border-radius: 3px;
-    border: 1px solid black;
+    border: none;
     color: rgb(0, 0, 0);
 }
 button[disabled]{
@@ -44,7 +44,7 @@ button[disabled]{
     background: rgba(207, 207, 207, 0.9);
     border-radius: 3px;
     color: rgb(128, 128, 128);
-    border: 1px solid rgb(88, 88, 88);
+    border: none;
 }
 a{
     display: flex;
@@ -65,7 +65,7 @@ a:hover{
     flex-direction: column;
     padding: 4px 11px 6px;
     background: rgba(0, 0, 0, 0.0241);
-    border: 1px solid rgba(0, 0, 0, 0.0241);
+    border: none;
     border-radius: 0px;
     flex: none;
     order: 0;
@@ -82,7 +82,7 @@ input[type=text]{
 
     background: rgba(255, 255, 255, 0.7);
     border-radius: 3px;
-    border: 1px solid rgb(0, 0, 0);
+    border: none;
 }
 input[type=text]:hover{
     height: auto * 49px;
@@ -91,7 +91,7 @@ input[type=text]:hover{
 
     background: rgba(255, 255, 255, 0.7);
     border-radius: 3px;
-    border: 1px solid rgb(0, 0, 0);
+    border: none;
 }
 input[type=text][disabled]{
     height: auto * 49px;
@@ -100,40 +100,62 @@ input[type=text][disabled]{
 
     background: rgba(255, 255, 255, 0.7);
     border-radius: 0px;
-    border: 1px solid rgb(95, 95, 95);
+    border: none;
+    color: grey;
+}
+input[disabled]{
+    height: auto * 49px;
+
+    /* Light/Fill Color/Control/Default */
+
+    background: rgba(255, 255, 255, 0.7);
+    border-radius: 0px;
+    border: none;
+    color: grey;
+}
+input{
+    height: auto * 49px;
+
+    /* Light/Fill Color/Control/Default */
+
+    background: rgba(255, 255, 255, 0.7);
+    border-radius: 0px;
+    border: none;
     color: grey;
 }
 html, body{
     margin: 0;
     padding: 0;
 }
-body{
-    background-color: rgb(223, 223, 223);
-}
 h1, h2, h3, h4, h5, h6, p, a{
     font-style: normal;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .app_menu{
-    width: 100%;
-    background-color: rgb(91, 91, 91);
-    margin: 0;
-    padding: 0;
+    background-color: rgba(255, 255, 255, 0.253);
+    color: rgb(0, 0, 0);
     height: 25px;
+    width: 100%;
+    padding: 0;
+    margin: 0;
 }
 .app_menu_button{
-    background-color: rgb(91, 91, 91);
-    height: 25px;
-    color: white;
-    border: none;
+    background-color: rgba(255, 255, 255, 0);
     display: inline-block;
+    color: rgb(0, 0, 0);
     position: relative;
+    text-align: center;
+    border-radius: 0px;
+    height: 25px;
+    border: none;
 }
 .app_menu_button:hover{
-    background-color: rgb(59, 59, 59);
-    height: 25px;
-    color: white;
+    background-color: rgba(255, 255, 255, 0.253);
+    color: rgb(0, 0, 0);
     display: inline-block;
+    text-align: center;
+    border-radius: 0px;
     border: none;
+    height: 25px;
 }
 * {cursor: url(../ressources/cursors/default.png), auto;}
