--- a/apps UI/ui.css
+++ b/apps UI/ui.css
@@ -1,50 +1,5 @@
-button{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 5px 12px 7px;
-    width: auto * 120px;
-    height: auto * 3px;
-
-    /* Light/Fill Color/Accent/Default */
-
-    background: rgba(221, 221, 221, 0.9);
-    border-radius: 3px;
-    border: none;
-    color: rgb(0, 0, 0);
-}
-button:hover{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 5px 12px 7px;
-    width: auto * 120px;
-    height: auto * 32px;
-
-    /* Light/Fill Color/Accent/Secondary */
-
-    background: rgba(172, 172, 172, 0.9);
-    border-radius: 3px;
-    border: none;
-    color: rgb(0, 0, 0);
-}
-button[disabled]{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 5px 12px 7px;
-    width: auto * 120px;
-    height: auto * 32px;
-
-    /* Light/Fill Color/Accent/Disabled */
-
-    background: rgba(207, 207, 207, 0.9);
-    border-radius: 3px;
-    color: rgb(128, 128, 128);
-    border: none;
+html , body {
+    overflow: hidden;
 }
 a{
     display: flex;
@@ -57,14 +12,14 @@ a{
 
     border-radius: 0px;
     border: none;
-    color: #003E92;
+    color: #fafafa;
     text-decoration: none;
 }
 a:hover{
     display: flex;
     flex-direction: column;
     padding: 4px 11px 6px;
-    background: rgba(0, 0, 0, 0.0241);
+    background: rgba(0, 0, 0, 0.024);
     border: none;
     border-radius: 0px;
     flex: none;
@@ -73,55 +28,7 @@ a:hover{
     text-decoration: none;
 }
 a[disabled]{
-    color: rgba(0, 0, 0, 0.3614);
-}
-input[type=text]{
-    height: auto * 49px;
-
-    /* Light/Fill Color/Control/Default */
-
-    background: rgba(255, 255, 255, 0.7);
-    border-radius: 3px;
-    border: none;
-}
-input[type=text]:hover{
-    height: auto * 49px;
-
-    /* Light/Fill Color/Control/Default */
-
-    background: rgba(255, 255, 255, 0.7);
-    border-radius: 3px;
-    border: none;
-}
-input[type=text][disabled]{
-    height: auto * 49px;
-
-    /* Light/Fill Color/Control/Default */
-
-    background: rgba(255, 255, 255, 0.7);
-    border-radius: 0px;
-    border: none;
-    color: grey;
-}
-input[disabled]{
-    height: auto * 49px;
-
-    /* Light/Fill Color/Control/Default */
-
-    background: rgba(255, 255, 255, 0.7);
-    border-radius: 0px;
-    border: none;
-    color: grey;
-}
-input{
-    height: auto * 49px;
-
-    /* Light/Fill Color/Control/Default */
-
-    background: rgba(255, 255, 255, 0.7);
-    border-radius: 0px;
-    border: none;
-    color: grey;
+    color: rgba(255, 255, 255, 0.361);
 }
 html, body{
     margin: 0;
@@ -130,19 +37,20 @@ html, body{
 h1, h2, h3, h4, h5, h6, p, a{
     font-style: normal;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: white;
 }
 .app_menu{
-    background-color: rgba(255, 255, 255, 0.253);
-    color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.253);
+    color: rgb(255, 255, 255);
     height: 25px;
     width: 100%;
     padding: 0;
     margin: 0;
 }
 .app_menu_button{
-    background-color: rgba(255, 255, 255, 0);
+    background-color: rgba(0, 0, 0, 0);
     display: inline-block;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     position: relative;
     text-align: center;
     border-radius: 0px;
@@ -150,8 +58,8 @@ h1, h2, h3, h4, h5, h6, p, a{
     border: none;
 }
 .app_menu_button:hover{
-    background-color: rgba(255, 255, 255, 0.253);
-    color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.253);
+    color: rgb(255, 255, 255);
     display: inline-block;
     text-align: center;
     border-radius: 0px;
