--- a/Icon UI/Icons.css
+++ b/Icon UI/Icons.css
@@ -297,3 +297,120 @@
     bottom: 10px;
     background: currentColor
 }
+.gg-browser {
+    box-sizing: border-box;
+    position: relative;
+    display: block;
+    transform: scale(var(--ggs,1));
+    width: 24px;
+    height: 18px;
+    border: 2px solid;
+    border-radius: 3px
+}
+.gg-browser::after,
+.gg-browser::before {
+    content: "";
+    display: block;
+    box-sizing: border-box;
+    position: absolute;
+    width: 22px;
+    height: 2px;
+    background: currentColor;
+    top: 4px
+}
+.gg-browser::after {
+    border-radius: 3px;
+    width: 2px;
+    box-shadow:
+        3px 0 0,
+        6px 0 0;
+    top: 1px;
+    left: 1px
+}
+.gg-sync {
+    box-sizing: border-box;
+    position: relative;
+    display: block;
+    transform: scale(var(--ggs,1));
+    border-radius: 40px;
+    border: 2px solid;
+    margin: 1px;
+    border-left-color: transparent;
+    border-right-color: transparent;
+    width: 18px;
+    height: 18px
+}
+.gg-sync::after,
+.gg-sync::before {
+    content: "";
+    display: block;
+    box-sizing: border-box;
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-top: 4px solid transparent;
+    border-bottom: 4px solid transparent;
+    transform: rotate(-45deg)
+}
+.gg-sync::before {
+    border-left: 6px solid;
+    bottom: -1px;
+    right: -3px
+}
+.gg-sync::after {
+    border-right: 6px solid;
+    top: -1px;
+    left: -3px
+}
+@keyframes spinner-two-alt {
+    0% {transform: rotate(0deg)}
+    to {transform: rotate(359deg)}
+}
+.gg-spinner-two-alt,.gg-spinner-two-alt::before {
+    box-sizing: border-box;
+    display: block;
+    width: 20px;
+    height: 20px
+}
+.gg-spinner-two-alt {
+    transform: scale(var(--ggs,1));
+    position: relative
+}
+.gg-spinner-two-alt::before {
+    content: "";
+    position: absolute;
+    border-radius: 100px;
+    animation: spinner-two-alt 1s cubic-bezier(.6,0,.4,1) infinite;
+    border: 3px solid transparent;
+    border-bottom-color: currentColor;
+    border-top-color: currentColor
+}
+.gg-signal,
+.gg-signal::after,
+.gg-signal::before {
+    display: block;
+    box-sizing: border-box;
+    width: 2px;
+    border-radius: 4px;
+    background: currentColor
+}
+.gg-signal {
+    position: relative;
+    transform: scale(var(--ggs,1));
+    height: 8px
+}
+.gg-signal::after,
+.gg-signal::before {
+    content: "";
+    position: absolute
+}
+.gg-signal::before {
+    height: 12px;
+    left: 4px;
+    bottom: 0
+}
+.gg-signal::after {
+    height: 4px;
+    left: -4px;
+    bottom: 0
+}
