--- a/ressources/System/MainStyle.css
+++ b/ressources/System/MainStyle.css
@@ -155,6 +155,7 @@ h1, h2, h3, h4, h5, h6, p, a{
 #notes{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: rgba(0, 0, 0, 0.548);
+    animation: fadeInAnimation 0.5s;
     backdrop-filter: blur(13px);
     border-radius: 9px;
     visibility: hidden;
@@ -294,6 +295,16 @@ input[Selaria]{
     color: white;
     padding: 9px;
     margin: 9px;
+}
+#Screensaver{
+    background-color: rgba(0, 0, 0, 0.391);
+    backdrop-filter: blur(13px);
+    animation: fadeInAnimation 0.5s;
+    position: absolute;
+    z-index: 999999999;
+    height: 100%;
+    width: 100%;
+    top: 0;
 }
 @keyframes fadeInAnimation {
     0% {
