Open and Create apps dialog are in the index.Html ! + Fix ! + Cancel button on immersive dialogs !

--- a/ressources/System/MainStyle.css
+++ b/ressources/System/MainStyle.css
@@ -369,7 +369,7 @@ input[Selaria] , button[Selaria]{
     bottom: 0;
     left: 0;
     width: 539px;
-    height: 195px;
+    height: fit-content;
     z-index: 9999999999999;
 }
 #Dialog *{
