--- a/apps UI/ui.css
+++ b/apps UI/ui.css
@@ -95,4 +95,4 @@ button:hover{
     padding: 10px;
     margin: 10px;
 }
-* {cursor: url(../ressources/cursors/default.png), auto;}
+* {cursor: url(../ressources/cursors/default.png), auto;font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
