--- a/apps UI/ui.css
+++ b/apps UI/ui.css
@@ -42,35 +42,6 @@ h1, h2, h3, h4, h5, h6, p, a{
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
 }
-.app_menu{
-    background-color: rgba(0, 0, 0, 0.253);
-    color: rgb(255, 255, 255);
-    height: 35px;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-}
-.app_menu_button{
-    background-color: rgba(0, 0, 0, 0);
-    transition: all 0.2s ease-in-out;
-    display: inline-block;
-    color: rgb(255, 255, 255);
-    position: relative;
-    text-align: center;
-    border-radius: 0px;
-    height: 35px;
-    border: none;
-}
-.app_menu_button:hover{
-    background-color: rgba(0, 0, 0, 0.253);
-    transition: all 0.2s ease-in-out;
-    color: rgb(255, 255, 255);
-    display: inline-block;
-    text-align: center;
-    border-radius: 5px;
-    border: none;
-    height: 35px;
-}
 input{
     background-color: rgba(0, 0, 0, 0.317);
     border: none;
@@ -79,7 +50,7 @@ input{
     padding: 10px;
     margin: 10px;
 }
-button{
+button[Selaria]{
     background-color: rgba(0, 0, 0, 0.317);
     border: none;
     border-radius: 15px;
@@ -87,7 +58,7 @@ button{
     padding: 10px;
     margin: 10px;
 }
-button:hover{
+button[Selaria]:hover{
     background-color: rgba(71, 149, 253, 0.317);
     border: none;
     border-radius: 15px;
