--- a/apps UI/ui.css
+++ b/apps UI/ui.css
@@ -66,4 +66,4 @@ button[Selaria]:hover{
     padding: 10px;
     margin: 10px;
 }
-* {cursor: url(../ressources/cursors/default.png), auto;font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
+* {cursor: url(../ressources/cursors/default.png), auto;font-family: "metropolis";}
